[package]

name = "cargo-build"
version = "0.0.1"
authors = [
	"Pierre Krieger <pierre.krieger1708@gmail.com>",
	"Aaron Lindsay"
]
build = "build/main.rs"

[lib]
name = "cargo_build"
path = "src/lib.rs"

[build-dependencies]
git2 = "0.2"

[dependencies.cargo]
version = "0.4.0"

[dependencies.docopt]
version = "*"

[dependencies.rustc-serialize]
version = "*"
